# access-log-bench

./: README.md
arrow/: Cargo.toml
arrow/src/: main.rs
datafusion/: Cargo.toml
datafusion/src/: main.rs
duckdb/: main.py
polars/: Cargo.toml
polars/src/: main.rs
